Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28017

AVFoundation playback broken on OS X with QGraphicsVideoItem

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.0.0 RC 1
    • 5.0.0 Beta 2
    • Multimedia
    • None
    • Mac OSX 10.7.5
    • macOS
    • 4c2346bbddc83e8a1f8baf9fc335280ed2dace5e

    Description

      The video example can no longer play any of my test mp4s that worked in beta 1. I've attached one of the smaller test files.

      http://qt-project.org/doc/qt-5.0/videographicsitem.html

      I'm using the beta libraries for mac from the downloads page. I have not tried it with qt built from source.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-28017
          # Subject Branch Project Status CR V

          Activity

            People

              janichol Andy Nichols
              eabbottbrenner Eric Abbott-Brenner
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes